// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultGlobalCss should inject default CSS styles from theme 1`] = `
<head>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    html{font-size:16px;box-sizing:border-box;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    *,*:before,*:after{box-sizing:inherit;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    body{margin:0;color:#24252E;font-family:"IBM Plex Sans",sans-serif;font-size:0.8125rem;overflow-y:scroll;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    hr{background-color:#D3D4DD;border:none;height:1px;margin:1rem 0;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    h1{margin:0;font-size:1.5rem;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    h2{margin:0;font-size:1.25rem;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    h3{margin:0;font-size:1rem;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    h4{margin:0;font-size:0.875rem;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    h5{margin:0;font-size:0.8125rem;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    h6{margin:0;font-size:0.75rem;}
  </style>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    p{margin:0;line-height:1.5;}
  </style>
</head>
`;

exports[`GlobalCss should inject global CSS styles 1`] = `
<head>
  <style
    data-emotion="css-global"
    data-s=""
  >
    
    body{color:red;}
  </style>
</head>
`;
